<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigationNews"
        android:title="@string/navigation_title_news"
        android:icon="@drawable/grey_news"
        />
    <item android:id="@+id/navigationSearch"
        android:title="@string/navigation_title_search"
        android:icon="@drawable/grey_search"
        />
    <item android:id="@+id/navigationHelp"
        android:title="@string/navigation_title_help"
        android:icon="@drawable/heart"
        />
    <item android:id="@+id/navigationHistory"
        android:title="@string/navigation_title_history"
        android:icon="@drawable/grey_history"
        />
    <item android:id="@+id/navigationProfile"
        android:title="@string/navigation_title_profile"
        android:icon="@drawable/grey_profile"
        />
</menu>
