<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.news.NewsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/newsAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/app_bar_item_margin_top"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/app_bar_item_margin_end"
                android:background="?attr/selectableItemBackground"
                android:visibility="invisible"
                android:src="@drawable/back_icon" />

            <TextView
                android:id="@+id/actionBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/navigation_title_news"
                style="@style/ActionBarTitleStyle"/>

            <ImageView
                android:id="@+id/newsFilterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/app_bar_item_margin_top"
                android:layout_marginEnd="@dimen/app_bar_item_margin_end"
                android:src="@drawable/filter" />

            <ImageView
                android:id="@+id/iconAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/app_bar_item_margin_top"
                android:layout_marginEnd="@dimen/app_bar_item_margin_end"
                android:background="?attr/selectableItemBackground"
                android:visibility="invisible"
                android:src="@drawable/ok_icon" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/filterCategoryHelp"
        android:textColor="@color/newsColorDescriptionItem"
        android:textSize="14sp"
        android:visibility="invisible"
        android:layout_marginStart="@dimen/filter_category_margin_all"
        android:layout_marginTop="@dimen/filter_category_margin_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_category_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewNews"
        app:layout_constraintVertical_bias="0"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:background="@drawable/search_selector_border"
        android:layout_marginTop="@dimen/filter_category_margin_all"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterCategoryHelp" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsAppbar" />

    <ProgressBar
        android:id="@+id/progressLoadingNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:indeterminateOnly="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textLoadingNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/loading_splash"
        android:textAlignment="center"
        android:textColor="@color/colorLoading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressLoadingNews"
        app:layout_constraintVertical_bias="0.06999999" />

</androidx.constraintlayout.widget.ConstraintLayout>